one line of code added locally

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <h4>Homework 1</h4>
     <p>I want to do a commit</p>
     <p>online change</p>
+    <p>local change</p>
     <title>Document</title>
 </head>
 <body>
