want to do fetch

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <p>I want to do a commit</p>
     <p>online change</p>
     <p>local change</p>
+    <p>another line of code and i will do fetch this time</p>
     <title>Document</title>
 </head>
 <body>
