--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <p>I want to do a commit</p>
     <p>online change</p>
     <p>local change</p>
+    <p>I added a single line of code locally but didn't pushed it here</p>
     <title>Document</title>
 </head>
 <body>
